Issue #23338: Fixed formatting ctypes error messages on Cygwin. Patch by Makoto Kato.